# OxI

./: .editorconfig  .gitattributes  Cargo.toml  FASE1_COMPLETADA.md  README.md  cc.py  consolidated_code.min.part0001.txt  consolidated_code.min.part0002.txt  consolidated_code.min.part0003.txt  consolidated_code.min.txt  package-lock.json  package.json  vite.config.ts
docs/: ARQUITECTURA.md  FASES.md  PLAN_DESARROLLO.md  README.md  STACK_TECNOLOGICO.md
oxi-client/: package-lock.json
oxi-client/src-tauri/src/: lib.rs  main.rs  types.rs
src/: App.css  App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  oxi-search.db  oxi-search.db-journal  oxi-search.db-shm  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  indexer.rs  lib.rs  mft_indexer.rs  types.rs
src/components/: search-view-simple.tsx  search-view.tsx
