[package]
name = "OxI"
version = "0.1.0"
edition = "2024"

[dependencies]
tauri = { version = "2.0.0", features = ["shell-open"] } # O la versión que te haya instalado el CLI
tauri-plugin-shell = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Base de datos
rusqlite = { version = "0.31", features = ["bundled"] }
# Filesystem
walkdir = "2.5"
ignore = "0.4"
# Utils
chrono = "0.4"
thiserror = "1.0"
anyhow = "1.0"