[package]
name = "oxi-client"
version = "0.1.0"
description = "OxI Search - Buscador ultrarrápido de archivos"
authors = ["OxI Team"]
edition = "2021"

[lib]
name = "oxi_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1.35", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2.5"
ignore = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
dirs = "5.0"
byteorder = "1.5"
